# Last_minute_life_saver

./: .env  .env.example  README.md  docker-compose.yml  gitignore
.github/workflows/: azure-static-web-apps-jolly-smoke-02d835200.yml  azure-static-web-apps-zealous-pebble-01fb96200.yml  ci.yml  deploy-pages.yml  main_lastminutelifesaver.yml
backend/backend/: demo.db  pyproject.toml  requirements.txt
backend/backend/app/: __init__.py  config.py  main.py
backend/backend/app/api/v1/: __init__.py  agent.py  events.py  health.py  tasks.py
backend/backend/app/core/: logging.py  rate_limit.py  security.py
backend/backend/app/db/: models.py  session.py
backend/backend/app/schemas/: __init__.py
backend/backend/app/services/: cache.py  prioritization.py
backend/backend/app/services/agent/: __init__.py  cards.py  graph.py  llm.py  state.py  tools.py
backend/backend/app/services/calendar/: __init__.py
backend/backend/scripts/: seed_synthetic_data.py
backend/backend/tests/: conftest.py  test_api.py  test_demo_flow.py
docs/: DEMO.md  SLIDES.md  WIREFRAME.md
frontend/frontend/: .env.production  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  vite.config.js
frontend/frontend/src/: App.jsx  index.css
frontend/frontend/src/components/: ActionCardsPanel.jsx  AgentLogPanel.jsx  ChatEntry.jsx  ConflictCard.jsx  DeadlineCard.jsx  DemoTimeline.jsx  EventCard.jsx  ImpactMetrics.jsx  Layout.jsx  PrepCard.jsx  TaskCard.jsx  TaskCard.test.jsx
frontend/frontend/src/pages/: CalendarPage.jsx  ChatPage.jsx  Dashboard.jsx  TasksPage.jsx
(+1 files in other folders)
