[project]
name = "last-minute-life-saver"
version = "0.1.0"
description = "Autonomous Productivity Companion - hackathon POC"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
